src/test/deca/context/invalid/type-inequality-right.context
type-inequality-right.deca:11:
